# portfolio

./: README.md  index.html  package-lock.json  package.json
backend/: .env  README.md  config.py  data.py  email_service.py  main.py  models.py  pyproject.toml  requirements.txt
frontend/: tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: About.tsx  Contact.tsx  Footer.tsx  Hero.tsx  LightRays.tsx  Navbar.tsx  Projects.tsx  Skills.tsx
frontend/src/components/icons/: XIcon.tsx
src/: index.css
src/components/: About.tsx  Contact.tsx  DotGrid.tsx  Footer.tsx  Hero.tsx  LightRays.css  Navbar.tsx  Projects.tsx  Skills.tsx
