[project]
name = "portfolio-backend"
version = "1.0.0"
description = "FastAPI backend for Lalith Kumar M's portfolio"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = []
